Tests/CompilerTests/negative/illegal-associated-type-declaration.hylo
// Alias declaration
type X = Int

// Associated type declaration
type X

// Incomplete type declaration
type
